# datareftool

./: .gitignore  .gitmodules  cmake-mingw.sh
lib/clipboard/: CMakeLists.txt
lib/lb_xplane/: CMakeLists.txt
lib/lb_xplane_ui/: CMakeLists.txt  layout_object.h
lib/lb_xplane_ui/container/: single_axis_layout.cpp
src/plugin/: drt_plugin.cpp
